--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>The Adventures of Bro-Cat and Ned</title>
-  </head>
+  <link href="/assets/css/styles.d3cd6cf509cc48de4875.css" rel="stylesheet"></head>
   <body>
-  <script type="text/javascript" src="assets/js/styles.js"></script><script type="text/javascript" src="assets/js/src.js"></script></body>
+  <script type="text/javascript" src="./assets/js/manifest.6aa330a4d0a8b76f62b5.js"></script><script type="text/javascript" src="./assets/js/vendor.ae023e567b2f10b62142.js"></script><script type="text/javascript" src="./assets/js/styles.d3cd6cf509cc48de4875.js"></script><script type="text/javascript" src="./assets/js/src.a09a44f7564efdad3f7a.js"></script></body>
 </html>
