--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>The Adventures of Bro-Cat and Ned</title>
-  <link href="/assets/css/styles.d3cd6cf509cc48de4875.css" rel="stylesheet"></head>
+    <meta charset="utf-8">
+    <title>The Adventures of Bro-Cat and Ned!</title>
+  <link href="/assets/css/styles.d5beef981e7028ec74c0.css" rel="stylesheet"><link href="/assets/css/src.f5ffea817966596ee8a1.css" rel="stylesheet"></head>
   <body>
-  <script type="text/javascript" src="./assets/js/manifest.6aa330a4d0a8b76f62b5.js"></script><script type="text/javascript" src="./assets/js/vendor.ae023e567b2f10b62142.js"></script><script type="text/javascript" src="./assets/js/styles.d3cd6cf509cc48de4875.js"></script><script type="text/javascript" src="./assets/js/src.a09a44f7564efdad3f7a.js"></script></body>
+    <div id="root"></div>
+  <script type="text/javascript" src="./assets/js/manifest.6116b09e2da6a20fbe12.js"></script><script type="text/javascript" src="./assets/js/vendor.ae023e567b2f10b62142.js"></script><script type="text/javascript" src="./assets/js/styles.d5beef981e7028ec74c0.js"></script><script type="text/javascript" src="./assets/js/src.f5ffea817966596ee8a1.js"></script></body>
 </html>
